<resources>
    <string name="app_name">ASarTaLine</string>
    <string name="action_settings">Settings</string>
    <string name="txt_greeting">Good afternoon, Anish</string>
    <string name="txt_time_to_do">It\'s time for lunch</string>
    <string name="txt_search_restaruant">Search Restaruant</string>
    <string name="txt_chinese">Chinese</string>
    <string name="txt_tacos">Tacos</string>
    <string name="txt_burger">Burger</string>
    <string name="txt_donut">Donut</string>
    <string name="offers">Offers</string>
    <string name="txt_view_details">View details</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="dummy_text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</string>
    <string name="txt_add_node">Add a note ( extra souce, no onions, etc )</string>
    <string name="txt_add_to_cart">Add to cart</string>
    <string name="no_data_to_display">No Data To Display</string>
</resources>
