<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:elevation="0dp">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="snap">

            <ImageView
                android:id="@+id/iv_details_image"
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:fitsSystemWindows="true"
                android:foreground="@drawable/half_transparent"
                android:scaleType="centerCrop"
                android:src="@drawable/pasta" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_full"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <net.aungpyaephyo.mmtextview.components.MMTextView
            android:id="@+id/tv_details_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_medium_2"
            android:layout_marginStart="@dimen/margin_medium_2"
            android:layout_marginTop="@dimen/margin_large"
            android:text="White sauce pasta"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/text_regular_3x"
            android:textStyle="bold" />

        <FrameLayout
            android:id="@+id/fl_flag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/tv_details_name"
            android:layout_marginEnd="@dimen/margin_medium_2">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:scaleType="fitXY"
                android:src="@drawable/flag" />

            <net.aungpyaephyo.mmtextview.components.MMTextView
                android:id="@+id/tv_details_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="$269"
                android:textColor="@color/white_full"
                android:textSize="@dimen/text_regular_2x"
                android:textStyle="bold"
                android:translationZ="10dp" />

        </FrameLayout>

        <net.aungpyaephyo.mmtextview.components.MMTextView
            android:id="@+id/tv_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/fl_flag"
            android:layout_margin="@dimen/margin_medium_2"
            android:lineSpacingMultiplier="1.2"
            android:text="@string/dummy_text"
            android:textColor="@color/secondary_text"
            android:textSize="@dimen/text_regular_2x" />

        <EditText
            android:id="@+id/et_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_details"
            android:layout_marginLeft="@dimen/margin_medium_2"
            android:layout_marginRight="@dimen/margin_medium_2"
            android:focusedByDefault="false"
            android:hint="@string/txt_add_node"
            android:textColor="@color/secondary_text"
            android:textSize="@dimen/text_regular_2x" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_note"
            android:layout_marginEnd="@dimen/margin_medium_2"
            android:layout_marginStart="@dimen/margin_medium_2"
            android:layout_marginTop="@dimen/margin_medium"
            android:background="@drawable/bg_round"
            app:cardElevation="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:weightSum="6">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:background="@color/primary">

                    <TextView
                        android:id="@+id/tv_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="2"
                        android:textColor="@color/white_full"
                        android:textSize="@dimen/text_regular_3x"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_sub"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignTop="@id/tv_count"
                        android:layout_marginEnd="@dimen/margin_medium"
                        android:layout_toStartOf="@id/tv_count"
                        android:text="-"
                        android:textColor="@color/white_full"
                        android:textSize="@dimen/text_regular_3x"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_add"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignTop="@id/tv_count"
                        android:layout_marginStart="@dimen/margin_medium"
                        android:layout_toEndOf="@id/tv_count"
                        android:text="+"
                        android:textColor="@color/white_full"
                        android:textSize="@dimen/text_regular_3x"
                        android:textStyle="bold" />

                </RelativeLayout>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="2dp"
                    android:layout_weight="4"
                    android:background="@color/primary"
                    android:gravity="center"
                    android:text="@string/txt_add_to_cart"
                    android:textAllCaps="true"
                    android:textColor="@color/white_full"
                    android:textSize="@dimen/text_regular_3x"
                    android:textStyle="bold" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>